# v3-stb-dot-com

./: .gitignore  README.md  configure-prod.sh  docker-compose.dev.yml  docker-compose.letsencrypt.yml  docker-compose.local-stage.yml  docker-compose.stage.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-and-push-docker-image.yml
.gitlab/issue_templates/: bug.md  issue.md
nginx-conf/: nginx.cloudflare.conf.template  nginx.conf.template  nginx.letsencrypt.conf.template
stbcms/: Dockerfile  manage.py  requirements.txt
stbcms/blocks/helpers/: __init__.py  complex_date_time_range_message.py
stbcms/blocks/models/: __init__.py  complex_date_time_block.py  complex_date_time_range_block.py  hero_block.py  link_block.py
stbcms/blocks/static/: link-block.js
stbcms/blocks/templates/: hero_block.html  link_block.html
stbcms/blog/: apps.py  models.py  signal_handlers.py
stbcms/blog/migrations/: 0001_initial.py  0002_blogpostpage_ts_created_blogpostpage_ts_updated.py  0003_blogpostpage_teaser.py  0004_alter_blogpostpage_teaser.py  0005_alter_blogpostpage_teaser.py  0006_blogpostpage_body.py  0007_blogpostpage_uid_slug_alter_blogpostpage_body.py  0009_blogpostlistingpage_canonical_url_and_more.py  (+1 more)
stbcms/core/: views.py  wagtail_hooks.py
stbcms/events/: apps.py  signal_handlers.py
stbcms/home/: models.py
stbcms/menus/: models.py  wagtail_hooks.py
stbcms/site_settings/: models.py
stbcms/stbcms/: urls.py  wsgi.py
stbcms/theme/: wagtail_hooks.py
stbcms/useful_links/: apps.py  models.py  signal_handlers.py  wagtail_hooks.py
(+147 files in other folders)
