[tool.poetry]
name = "v3-stb-dot-com"
version = "0.1.0"
description = ""
authors = ["jacoacoacob <jacoacoacob@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "~4.1.1"
django-dotenv = "^1.4.2"
django-extensions = "^3.2.1"
gunicorn = "^20.1.0"
django-storages = "^1.13.1"
boto3 = "^1.24.71"
dj-database-url = "^1.0.0"
django-tailwind = "^3.4.0"
whitenoise = "^6.2.0"
django-debug-toolbar = "^3.6.0"
psycopg2 = "^2.9.5"
wagtail-seo = "^2.3.0"
# wagtail-2fa = "^1.6.3"
wagtail-2fa = { git = "https://github.com/labd/wagtail-2fa.git", rev = "f029a7c0838e763ae77ce0d292604bacf8c5833e" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
